--- a/src/roomDetails.css
+++ b/src/roomDetails.css
@@ -74,3 +74,17 @@ main {
   align-items: center;
   row-gap: 3rem;
 }
+
+@media only screen and (min-width: 768px) {
+  .details {
+    flex-direction: row;
+  }
+
+  .navPanel {
+    display: inline-block;
+  }
+
+  .vis {
+    display: none;
+  }
+}
