Style Create Room Page And Fix Responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,17 @@ code {
   display: none;
 }
 
+.error {
+  border: 2px solid #FF6565;
+}
+
+.error-message {
+  color: #FF6565;
+  padding: 0.5em 0.2em 1em 0.2em;
+  height: 1em;
+  font-size: 0.8em;
+}
+
 @media only screen and (min-width: 768px) {
   .nav {
     display: inline-block;
