--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* stylelint-disable */
+/* stylelint-disable -- Stylint doesn't recognise tailwind rules */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
