--- a/src/pages/createroom.css
+++ b/src/pages/createroom.css
@@ -1,13 +1,14 @@
 .form-container {
   height: 130vh;
-  background-image: linear-gradient(
-                                    rgba(0, 0, 0, 0.527),
-                                    rgba(0, 0, 0, 0.5)
-                                    ),
-                                    url(https://images.unsplash.com/photo-1574643156929-51fa098b0394?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+  background-image:
+    linear-gradient(
+      rgba(0, 0, 0, 0.527),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url(https://images.unsplash.com/photo-1574643156929-51fa098b0394?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
   background-size: cover;
   background-position: center;
-  background-repeat: none;
+  background-repeat: no-repeat;
   position: relative;
 }
 
