--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+* {
+  text-decoration: none;
+  list-style: none;
+}
+
 html {
   height: 100vh;
 }
@@ -28,6 +33,11 @@ code {
     Consolas,
     'Courier New',
     monospace;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .room-item {
@@ -71,10 +81,20 @@ code {
   display: none;
 }
 
+.nav-link {
+  margin: 0.5rem 0;
+  color: white;
+  font-size: 18px;
+  font-weight: 600;
+}
+
 @media only screen and (min-width: 768px) {
   .nav {
-    display: inline-block;
+    display: flex;
     width: 250px;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.5rem;
   }
 
   .vis {
