--- a/src/index.css
+++ b/src/index.css
@@ -66,12 +66,22 @@ a {
   display: flex;
 }
 
+.main {
+  width: 100%;
+}
+
+.main h1 {
+  margin-top: 5rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  font-size: 60px;
+}
+
 .rooms {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  width: 100%;
 }
 
 .nav {
@@ -101,7 +111,7 @@ a {
     display: none;
   }
 
-  .rooms {
+  .main {
     margin-left: 250px;
   }
 }
