--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,7 @@ a {
   margin-bottom: 2rem;
   text-align: center;
   font-size: 60px;
+  text-transform: uppercase;
 }
 
 .rooms {
@@ -89,7 +90,7 @@ a {
 .nav {
   position: fixed;
   height: 100%;
-  background-color: brown;
+  background-color: #253439;
   display: none;
 }
 
