--- a/src/index.css
+++ b/src/index.css
@@ -106,8 +106,11 @@ a {
     display: flex;
     width: 250px;
     flex-direction: column;
-    justify-content: center;
     gap: 1.5rem;
+  }
+
+  .lunar-logo {
+    width: 100%;
   }
 
   .vis {
