--- a/src/pages/createroom.css
+++ b/src/pages/createroom.css
@@ -24,12 +24,12 @@
   transition: 300ms ease-in;
 }
 
-form {
+/* form {
   box-shadow: 17px 18px 17px 0 rgba(26, 25, 25, 0.8);
   -webkit-box-shadow: 17px 18px 17px 0 rgba(26, 25, 25, 0.8);
   -moz-box-shadow: 17px 18px 17px 0 rgba(26, 25, 25, 0.8);
   border-radius: 10px;
-}
+} */
 
 @media only screen and (min-width: 768px) {
   .form-container {
