--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;500&family=Squada+One&display=swap');
 
 * {
+  margin: 0;
+  padding: 0;
   text-decoration: none;
   list-style: none;
 }
