Style Reservations Page

--- a/src/pages/createroom.css
+++ b/src/pages/createroom.css
@@ -1,11 +1,6 @@
 .form-container {
   height: 130vh;
-  background-image:
-    linear-gradient(
-      rgba(0, 0, 0, 0.527),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(https://images.unsplash.com/photo-1574643156929-51fa098b0394?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+  background-image: url(https://images.unsplash.com/photo-1574643156929-51fa098b0394?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -25,10 +20,23 @@
 }
 
 form {
-  box-shadow: 17px 18px 17px 0 rgba(26, 25, 25, 0.8);
+  box-shadow: 17px 18px 17px 0 rgba(77, 58, 58, 0.8);
   -webkit-box-shadow: 17px 18px 17px 0 rgba(26, 25, 25, 0.8);
   -moz-box-shadow: 17px 18px 17px 0 rgba(26, 25, 25, 0.8);
   border-radius: 10px;
+}
+
+.room-btn {
+  border-radius: 25px;
+  background-color: darkred;
+  outline: none;
+  transition: 350ms;
+}
+
+.room-btn:hover {
+  background-color: darkred;
+  opacity: 0.95;
+  transform: scale(0.97);
 }
 
 @media only screen and (min-width: 768px) {
@@ -37,7 +45,16 @@ form {
   }
 
   .my_container {
-    width: 70%;
+    width: 55%;
     margin: 0 auto;
+    left: 65%;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .my_container {
+    width: 65%;
+    margin: 0 auto;
+    left: 60%;
   }
 }
