--- a/src/pages/addReservation.css
+++ b/src/pages/addReservation.css
@@ -25,35 +25,45 @@ h1 {
   right: 0;
   background-color: brown;
   opacity: 0.85;
-  z-index: 1;
+  z-index: 0.5;
 }
 
 .txtWrapper {
   color: #fff;
   z-index: 10;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 70%;
-  margin: 15rem auto 0;
+  margin: 0 auto;
   text-align: center;
 }
 
 .resBtn {
-  background-color: #fff;
-  font-weight: bold;
+  background-color: rgb(68, 21, 21);
   border: none;
-  padding: 15px 15px;
-  color: darkred;
-  border-radius: 20px;
-  margin-top: 2rem;
-  box-shadow: 0 1px 8px rgb(93, 25, 25);
+  padding: 10px 15px;
+  color: #fff;
+  border-radius: 25px;
+  margin-top: 2.2rem;
+  transition: 350ms;
 }
 
 .resBtn:hover {
-  background-color: blue;
+  background-color: rgb(60, 8, 8);
+  opacity: 0.95;
+  transform: scale(0.97);
+}
+
+.error-message-white {
   color: #fff;
+}
+
+.form-radius {
+  border-radius: 25px;
+  padding: auto 15px;
 }
 
 @media (min-width: 768px) {
