--- a/src/index.css
+++ b/src/index.css
@@ -14,32 +14,17 @@ html {
 @tailwind utilities;
 /* stylelint-enable */
 
-body {
+* {
   margin: 0;
-  font-family:
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    'Roboto',
-    'Oxygen',
-    'Ubuntu',
-    'Cantarell',
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family:
-    source-code-pro,
-    Menlo,
-    Monaco,
-    Consolas,
-    'Courier New',
-    monospace;
+body {
+  font-family: 'Barlow', sans-serif;
+  font-size: 1.2rem;
+  color: #333;
+  line-height: 1.5;
 }
 
 a {
@@ -80,7 +65,6 @@ a {
 }
 
 .main h1 {
-  font-family: 'Barlow', sans-serif;
   color: #253439;
   margin-top: 5rem;
   text-align: center;
@@ -89,7 +73,6 @@ a {
 }
 
 .main h2 {
-  font-family: 'Barlow', sans-serif;
   color: #253439;
   margin-bottom: 2rem;
   text-align: center;
@@ -119,6 +102,10 @@ a {
   font-weight: 600;
 }
 
+.upperCase {
+  text-transform: uppercase;
+}
+
 .error {
   border: 2px solid #ff6565;
 }
@@ -134,7 +121,11 @@ a {
   .nav {
     display: flex;
     width: 250px;
+    margin: 0 auto;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     gap: 1.5rem;
   }
 
