--- a/src/pages/reservations.css
+++ b/src/pages/reservations.css
@@ -7,11 +7,12 @@
 .reservation {
   display: flex;
   width: 100%;
-  border: 1px solid;
   justify-content: space-between;
   padding: 1rem;
   margin: 1rem 0;
   gap: 1.5rem;
+  box-shadow: 0 1px 8px rgb(224, 224, 224);
+  border-radius: 5px;
 }
 
 .tex {
@@ -19,8 +20,16 @@
   flex-wrap: wrap;
   align-items: center;
   margin: 0.5rem 0;
+  font-weight: 600;
 }
 
 .tex span {
   margin-left: 0.8rem;
+  font-weight: 400;
+}
+
+.co2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
