--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
 @tailwind utilities;
 /* stylelint-enable */
 
-@import url('https://fonts.googleapis.com/css2?family=Barlow:wght@400;500&family=Squada+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 * {
   text-decoration: none;
@@ -12,6 +13,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+
+*,
+*::before,
+*::after {
+  font-family: 'Montserrat', sans-serif;
 }
 
 html {
@@ -19,10 +27,10 @@ html {
 }
 
 body {
-  font-family: 'Barlow', sans-serif;
   font-size: 1.2rem;
   color: #333;
   line-height: 1.5;
+  font-family: 'Montserrat', sans-serif;
 }
 
 a {
@@ -35,11 +43,11 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  max-width: 300px;
-  gap: 1rem;
+  max-width: 450px;
+  gap: 0;
   margin: 0.5rem;
   padding: 0.5rem;
-  box-shadow: 0 1px 8px rgb(224, 224, 224);
+  box-shadow: 0 1px 8px rgb(224 224 224);
   border-radius: 5px;
 }
 
@@ -53,6 +61,18 @@ a {
   border-radius: 5px;
 }
 
+ol,
+ul,
+menu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  flex-direction: column;
+  float: left;
+  text-align: initial;
+}
+
 .home {
   position: relative;
   display: flex;
@@ -63,7 +83,7 @@ a {
 }
 
 .main h1 {
-  color: #253439;
+  color: #000;
   margin-top: 5rem;
   text-align: center;
   font-size: 60px;
@@ -89,7 +109,7 @@ a {
 .nav {
   position: fixed;
   height: 100%;
-  background-color: #253439;
+  background-color: #fff;
   display: none;
 }
 
@@ -100,30 +120,66 @@ a {
   font-weight: 600;
 }
 
-.darkened-off {
-  background-color: rgba(37, 52, 57);
+.offcanvas-body {
+  background-color: #fff;
+}
+
+.offcanvas-header {
+  background-color: #fff;
+}
+
+.bg-green {
+  color: #99c22a;
+}
+
+.bg-green-button {
+  background-color: #99c22a;
+}
+
+.text-white {
+  color: #fff;
+}
+
+button,
+input[type="button"],
+input[type="submit"] {
+  cursor: pointer;
   border: none;
+  box-shadow: none;
+  user-select: none;
 }
 
 .upperCase {
   text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #99c22a;
+  border: none;
+}
+
+.btn-close {
+  color: #000;
 }
 
 .error {
-  border: 2px solid #ff6565;
+  border: 2px solid #99c22a;
+}
+
+.active {
+  color: #99c22a;
 }
 
 .error-message {
-  color: #ff6565;
+  color: #99c22a;
   padding: 0.5em 0.2em 1em 0.2em;
   height: 1em;
   font-size: 0.8em;
 }
 
-.lunar-logo-m {
-  width: 70%;
-  height: auto;
-  margin: 0 auto;
+.brand {
+  font-family: 'Lobster', cursive;
+  rotate: -10deg;
+  font-size: 2rem;
+  transform: rotate(-10deg);
 }
 
 @media only screen and (min-width: 768px) {
@@ -132,18 +188,14 @@ a {
     width: 250px;
     margin: 0 auto;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
     gap: 1.5rem;
+    border: #253439 solid 1px;
   }
 
-  .lunar-logo {
-    width: 100%;
-  }
-
-  .vis {
-    display: none;
+  .offcanvas-body {
+    width: 75%;
   }
 
   .main {
