--- a/src/index.css
+++ b/src/index.css
@@ -185,9 +185,9 @@ input[type="submit"] {
 @media only screen and (min-width: 768px) {
   .nav {
     display: flex;
+    /* flex-direction: column; */
     width: 250px;
     margin: 0 auto;
-    flex-direction: column;
     align-items: center;
     text-align: center;
     gap: 1.5rem;
